库/XCGUI/xcgui.h

typedef  __int64  vint;
typedef  int      vint;
typedef void* HXCGUI;       
enum XC_OBJECT_TYPE  
{
	XC_ERROR = -1,   
	XC_NOTHING = 0,    
	XC_WINDOW = 1,    
	XC_MODALWINDOW = 2,    
	XC_FRAMEWND = 3,    
	XC_FLOATWND = 4,    
	XC_COMBOBOXWINDOW = 11,   
	XC_POPUPMENUWINDOW = 12,  
	XC_POPUPMENUCHILDWINDOW = 13,   
	XC_OBJECT_UI = 19,   
	XC_WIDGET_UI = 20,   
	XC_ELE = 21,   
	XC_BUTTON = 22,   
	XC_RICHEDIT = 23,   
	XC_COMBOBOX = 24,   
	XC_SCROLLBAR = 25,   
	XC_SCROLLVIEW = 26,   
	XC_LIST = 27,   
	XC_LISTBOX = 28,   
	XC_LISTVIEW = 29,   
	XC_TREE = 30,   
	XC_MENUBAR = 31,   
	XC_SLIDERBAR = 32,   
	XC_PROGRESSBAR = 33,   
	XC_TOOLBAR = 34,   
	XC_MONTHCAL = 35,   
	XC_DATETIME = 36,   
	XC_PROPERTYGRID = 37,   
	XC_EDIT_COLOR = 38,   
	XC_EDIT_SET = 39,   
	XC_TABBAR = 40,   
	XC_TEXTLINK = 41,   
	XC_PANE = 42,   
	XC_PANE_SPLIT = 43,   
	XC_MENUBAR_BUTTON = 44,   
	XC_EDIT = 45,   
	XC_EDITOR = 46,   
	XC_TABLE = 47,   
	XC_EDIT_FILE = 50,   
	XC_EDIT_FOLDER = 51,   
	XC_LIST_HEADER = 52,   
	XC_ELE_LAYOUT = 53,   
	XC_LAYOUT_FRAME = 54,   
	XC_SHAPE = 61,    
	XC_SHAPE_TEXT = 62,    
	XC_SHAPE_PICTURE = 63,    
	XC_SHAPE_RECT = 64,    
	XC_SHAPE_ELLIPSE = 65,    
	XC_SHAPE_LINE = 66,    
	XC_SHAPE_GROUPBOX = 67,    
	XC_SHAPE_GIF = 68,    
	XC_SHAPE_TABLE = 69,    
	XC_MENU = 81,   
	XC_IMAGE_TEXTURE = 82,   
	XC_HDRAW = 83,   
	XC_FONT = 84,   
	XC_IMAGE_FRAME = 88,   
	XC_SVG = 89,   
	XC_LAYOUT_OBJECT = 101, 
	XC_ADAPTER = 102, 
	XC_ADAPTER_TABLE = 103, 
	XC_ADAPTER_TREE = 104, 
	XC_ADAPTER_LISTVIEW = 105, 
	XC_ADAPTER_MAP = 106, 
	XC_BKINFOM = 116, 
	XC_LAYOUT_LISTVIEW = 111,  
	XC_LAYOUT_LIST = 112,  
	XC_LAYOUT_OBJECT_GROUP = 113,  
	XC_LAYOUT_OBJECT_ITEM = 114,  
	XC_LAYOUT_PANEL = 115,  
	XC_LAYOUT_BOX = 124,      
	XC_EXTENSION       =125,      
	XC_ANIMATION_SEQUENCE = 131,   
	XC_ANIMATION_GROUP = 132,   
	XC_ANIMATION_ITEM = 133,   
};
enum XC_OBJECT_TYPE_EX  
{
	xc_ex_error = -1,        
	button_type_default = 0, 
	button_type_radio,     
	button_type_check,     
	button_type_close,     
	button_type_min,       
	button_type_max,       
	element_type_layout,   
};
enum  XC_OBJECT_STYLE    
{
	object_style_default = 0,
	object_style_element_toolBar_separator,    
	object_style_element_frameWnd_dock_left,   
	object_style_element_frameWnd_dock_right,  
	object_style_element_frameWnd_dock_top,    
	object_style_element_frameWnd_dock_bottom, 
	object_style_element_notifyMsg,            
	object_style_button_radio=100,             
	object_style_button_check,                 
	object_style_button_icon,                  
	object_style_button_expand,                
	object_style_button_close,			       
	object_style_button_max,			       
	object_style_button_min,			       
	object_style_button_arrow_left,            
	object_style_button_arrow_right,           
	object_style_button_arrow_top,             
	object_style_button_arrow_bottom,          
	object_style_button_toolBar,               
	object_style_button_tabBar,                
	object_style_button_tabBar_close,          
	object_style_button_scrollbar_slider_h,    
	object_style_button_scrollbar_slider_v,    
	object_style_button_slider,                
	object_style_button_pane_close,            
	object_style_button_pane_lock,             
	object_style_button_pane_menu,             
	object_style_button_pane_dock_left,        
	object_style_button_pane_dock_right,       
	object_style_button_pane_dock_top,         
	object_style_button_pane_dock_bottom,      
	object_style_monthCal_button_today,        
	object_style_monthCal_button_last_year,    
	object_style_monthCal_button_next_year,    
	object_style_monthCal_button_last_month,   
	object_style_monthCal_button_next_month,   
	object_style_window_tooltip =200,          
	object_style_window_monthCal,              
	object_style_window_messageBox,            
};
enum  common_state3_   
{
	common_state3_leave = 0,  
	common_state3_stay,     
	common_state3_down,     
};
enum  button_state_  
{
	button_state_leave = 0,   
	button_state_stay,      
	button_state_down,      
	button_state_check,     
	button_state_disable,   
};
enum  button_icon_align_  
{
	button_icon_align_left = 0,  
	button_icon_align_top,     
	button_icon_align_right,   
	button_icon_align_bottom,  
};
XC_API XC_OBJECT_TYPE WINAPI XObj_GetType(HXCGUI hXCGUI);
XC_API XC_OBJECT_TYPE WINAPI XObj_GetTypeBase(HXCGUI hXCGUI);
XC_API XC_OBJECT_TYPE_EX WINAPI XObj_GetTypeEx(HXCGUI hXCGUI);
XC_API void WINAPI XUI_SetStyle(HXCGUI hXCGUI, XC_OBJECT_STYLE nStyle);
XC_API XC_OBJECT_STYLE WINAPI XUI_GetStyle(HXCGUI hXCGUI);
XC_API void WINAPI XUI_EnableCSS(HXCGUI hXCGUI, BOOL bEnable);
XC_API void WINAPI XUI_SetCssName(HXCGUI hXCGUI, const wchar_t* pName);
XC_API const wchar_t* WINAPI XUI_GetCssName(HXCGUI hXCGUI);
XC_API BOOL WINAPI XWidget_IsShow(HXCGUI hXCGUI);
XC_API void WINAPI XWidget_Show(HXCGUI hXCGUI, BOOL bShow);
XC_API void WINAPI XWidget_EnableLayoutControl(HXCGUI hXCGUI, BOOL bEnable);
XC_API BOOL WINAPI XWidget_IsLayoutControl(HXCGUI hXCGUI);
XC_API HELE WINAPI XWidget_GetParentEle(HXCGUI hXCGUI);
XC_API HXCGUI WINAPI XWidget_GetParent(HXCGUI hXCGUI);
XC_API HWND WINAPI XWidget_GetHWND(HXCGUI hXCGUI);
XC_API HWINDOW WINAPI XWidget_GetHWINDOW(HXCGUI hXCGUI);
XC_API HELE WINAPI XBtn_Create(int x, int y, int cx, int cy, const wchar_t* pName, HXCGUI hParent=NULL);
XC_API BOOL WINAPI XBtn_IsCheck(HELE hEle);
XC_API BOOL WINAPI XBtn_SetCheck(HELE hEle, BOOL bCheck);
XC_API void WINAPI XBtn_SetState(HELE hEle, common_state3_ nState);
XC_API common_state3_ WINAPI XBtn_GetState(HELE hEle);
XC_API button_state_ WINAPI XBtn_GetStateEx(HELE hEle);
XC_API void WINAPI XBtn_SetTypeEx(HELE hEle, XC_OBJECT_TYPE_EX nType);
XC_API void WINAPI XBtn_SetGroupID(HELE hEle, int nID);
XC_API int WINAPI XBtn_GetGroupID(HELE hEle);
XC_API void WINAPI XBtn_SetBindEle(HELE hEle, HELE hBindEle);
XC_API HELE WINAPI XBtn_GetBindEle(HELE hEle);
XC_API void WINAPI XBtn_SetTextAlign(HELE hEle, int nFlags);
XC_API int WINAPI XBtn_GetTextAlign(HELE hEle);
XC_API void WINAPI XBtn_SetIconAlign(HELE hEle, button_icon_align_ align);
XC_API void WINAPI XBtn_SetOffset(HELE hEle, int x, int y);
XC_API void WINAPI XBtn_SetOffsetIcon(HELE hEle, int x, int y);
XC_API void WINAPI XBtn_SetIconSpace(HELE hEle, int size);
XC_API void WINAPI XBtn_SetText(HELE hEle, const wchar_t* pName);
XC_API const wchar_t* WINAPI XBtn_GetText(HELE hEle);
XC_API void WINAPI XBtn_SetIcon(HELE hEle, HIMAGE hImage);
XC_API void WINAPI XBtn_SetIconDisable(HELE hEle, HIMAGE hImage);
XC_API HIMAGE WINAPI XBtn_GetIcon(HELE hEle, int nType);
XC_API void WINAPI XBtn_AddAnimationFrame(HELE hEle, HIMAGE hImage, UINT uElapse);
XC_API void WINAPI XBtn_EnableAnimation(HELE hEle, BOOL bEnable, BOOL bLoopPlay=FALSE);
XC_API HELE WINAPI XComboBox_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API BOOL WINAPI XComboBox_SetSelItem(HELE hEle, int iIndex);
XC_API HXCGUI WINAPI XComboBox_CreateAdapter(HELE hEle);
XC_API void WINAPI XComboBox_BindAdapter(HELE hEle, HXCGUI hAdapter);
XC_API HXCGUI WINAPI XComboBox_GetAdapter(HELE hEle);
XC_API void WINAPI XComboBox_SetBindName(HELE hEle, const wchar_t* pName);
XC_API void WINAPI XComboBox_GetButtonRect(HELE hEle, RECT* pRect);
XC_API void WINAPI XComboBox_SetButtonSize(HELE hEle, int size);
XC_API void WINAPI XComboBox_SetDropHeight(HELE hEle, int height);
XC_API int WINAPI XComboBox_GetDropHeight(HELE hEle);
XC_API void WINAPI XComboBox_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);
XC_API void WINAPI XComboBox_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);
XC_API void WINAPI XComboBox_EnableDrawButton(HELE hEle, BOOL bEnable);
XC_API void WINAPI XComboBox_EnableEdit(HELE hEle, BOOL bEdit);
XC_API HBKM WINAPI XBkM_Create();
XC_API void WINAPI XBkM_Destroy(HBKM hBkInfoM);
XC_API int WINAPI XBkM_SetBkInfo(HBKM hBkInfoM, const wchar_t* pText);
XC_API int WINAPI XBkM_AddInfo(HBKM hBkInfoM, const wchar_t* pText);
XC_API void WINAPI XBkM_AddBorder(HBKM hBkInfoM, int nState, COLORREF color, int width, int id=0);
XC_API void WINAPI XBkM_AddFill(HBKM hBkInfoM, int nState, COLORREF color, int id=0);
XC_API void WINAPI XBkM_AddImage(HBKM hBkInfoM, int nState, HIMAGE hImage, int id=0);
XC_API int WINAPI XBkM_GetCount(HBKM hBkInfoM);
XC_API void WINAPI XBkM_Clear(HBKM hBkInfoM);
XC_API BOOL WINAPI XBkM_Draw(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect);
XC_API BOOL WINAPI XBkM_DrawEx(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect, int nStateEx);
XC_API void WINAPI XBkM_EnableAutoDestroy(HBKM hBkInfoM, BOOL bEnable);
XC_API void WINAPI XBkM_AddRef(HBKM hBkInfoM);
XC_API void WINAPI XBkM_Release(HBKM hBkInfoM);
XC_API int WINAPI XBkM_GetRefCount(HBKM hBkInfoM);
XC_API BOOL WINAPI XC_IsHXCGUI(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API HWINDOW WINAPI XC_hWindowFromHWnd(HWND hWnd);
XC_API BOOL WINAPI XC_SetActivateTopWindow();
XC_API BOOL WINAPI XC_SetProperty(HXCGUI hXCGUI, const wchar_t* pName, const wchar_t* pValue);
XC_API const wchar_t* WINAPI XC_GetProperty(HXCGUI hXCGUI, const wchar_t* pName);
XC_API BOOL WINAPI XC_RegisterWindowClassName(const wchar_t* pClassName);
XC_API BOOL WINAPI XC_IsSViewExtend(HELE hEle);
XC_API XC_OBJECT_TYPE WINAPI XC_GetObjectType(HXCGUI hXCGUI);
XC_API HXCGUI WINAPI XC_GetObjectByID(HWINDOW hWindow, int nID);
XC_API HXCGUI WINAPI XC_GetObjectByIDName(HWINDOW hWindow, const wchar_t* pName);
XC_API HXCGUI WINAPI XC_GetObjectByUID(int nUID);
XC_API HXCGUI WINAPI XC_GetObjectByUIDName(const wchar_t* pName);
XC_API HXCGUI WINAPI XC_GetObjectByName(const wchar_t* pName);
XC_API void WINAPI XC_SetPaintFrequency(UINT nMilliseconds);
XC_API void WINAPI XC_SetTextRenderingHint(int nType);
XC_API void WINAPI XC_EnableGdiDrawText(BOOL bEnable);
XC_API BOOL WINAPI XC_RectInRect(RECT* pRect1, RECT* pRect2);
XC_API void WINAPI XC_CombineRect(RECT* pDest, RECT* pSrc1, RECT* pSrc2);
XC_API void WINAPI XC_ShowLayoutFrame(BOOL bShow);
XC_API void WINAPI XC_EnableDebugFile(BOOL bEnable);
XC_API void WINAPI XC_EnableResMonitor(BOOL bEnable);
XC_API void WINAPI XC_SetLayoutFrameColor(COLORREF color);
XC_API void WINAPI XC_EnableErrorMessageBox(BOOL bEnable);
XC_API void WINAPI XC_EnableAutoExitApp(BOOL bEnable);
XC_API void WINAPI XC_GetTextSize(const wchar_t* pString, int length, HFONTX hFontX, SIZE* pOutSize);
XC_API void WINAPI XC_GetTextShowSize(const wchar_t* pString, int length, HFONTX hFontX, SIZE* pOutSize);
XC_API void WINAPI XC_GetTextShowSizeEx(const wchar_t* pString, int length, HFONTX hFontX, int nTextAlign, SIZE* pOutSize);
XC_API void WINAPI XC_GetTextShowRect(const wchar_t* pString, int length, HFONTX hFontX, int nTextAlign, int width, SIZE* pOutSize);
XC_API HFONTX WINAPI XC_GetDefaultFont();
XC_API void WINAPI XC_SetDefaultFont(HFONTX hFontX);
XC_API void WINAPI XC_AddFileSearchPath(const wchar_t* pPath);
XC_API void WINAPI XC_InitFont(LOGFONTW* pFont, wchar_t* pName, int size, BOOL bBold=FALSE, BOOL bItalic=FALSE, BOOL bUnderline=FALSE, BOOL bStrikeOut=FALSE);
XC_API void* WINAPI XC_Malloc(int size);
XC_API void WINAPI XC_Free(void* p);
XC_API void WINAPI XC_Alert(const wchar_t* pTitle, const wchar_t* pText);
XC_API HINSTANCE WINAPI XC_Sys_ShellExecute(HWND hwnd, const wchar_t* lpOperation, const wchar_t* lpFile, const wchar_t* lpParameters, const wchar_t* lpDirectory, int nShowCmd);
XC_API HMODULE WINAPI XC_LoadLibrary(const wchar_t* lpFileName);
XC_API FARPROC WINAPI XC_GetProcAddress(HMODULE hModule, const char* lpProcName);
XC_API BOOL WINAPI XC_FreeLibrary(HMODULE hModule);
XC_API HMODULE WINAPI XC_LoadDll(const wchar_t* pDllFileName);
XC_API BOOL WINAPI XC_LoadStyle(const wchar_t* pFileName);
XC_API BOOL WINAPI XC_LoadStyleZip(const wchar_t* pZipFile, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API BOOL WINAPI XC_LoadStyleZipMem(const void* data, int length, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API BOOL WINAPI XC_LoadResource(const wchar_t* pFileName);
XC_API BOOL WINAPI XC_LoadResourceZip(const wchar_t* pZipFileName, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API BOOL WINAPI XC_LoadResourceZipMem(const void* data, int length, const wchar_t* pFileName, const wchar_t* pPassword=NULL);
XC_API BOOL WINAPI XC_LoadResourceFromString(const char* pStringXML, const wchar_t* pFileName);
XC_API BOOL WINAPI XC_LoadResourceFromStringUtf8(const char* pStringXML, const wchar_t* pFileName);
XC_API void WINAPI _XC_SetType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API void WINAPI _XC_AddType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API void WINAPI _XC_BindData(HXCGUI hXCGUI, vint data);
XC_API vint WINAPI _XC_GetBindData(HXCGUI hXCGUI);
XC_API BOOL WINAPI XInitXCGUI(BOOL bD2D);
XC_API void WINAPI XRunXCGUI();
XC_API void WINAPI XExitXCGUI();
XC_API void WINAPI XC_PostQuitMessage(int nExitCode);