库/XCGUI/XCGUI.pas


function XC_IsHXCGUI(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE): BOOL; stdcall; external XCGUI_DLL;

function XC_hWindowFromHWnd(hWnd: HWND): HWINDOW; stdcall; external XCGUI_DLL;

function XC_SetActivateTopWindow(): BOOL; stdcall; external XCGUI_DLL;

function XC_SetProperty(hXCGUI: HXCGUI; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_GetProperty(hXCGUI: HXCGUI; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XC_RegisterWindowClassName(pClassName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_IsSViewExtend(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XC_GetObjectType(hXCGUI: HXCGUI): XC_OBJECT_TYPE; stdcall; external XCGUI_DLL;

function XC_GetObjectByID(hWindow: HWINDOW; nID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XC_GetObjectByIDName(hWindow: HWINDOW; pName: PWideChar): HXCGUI; stdcall; external XCGUI_DLL;

function XC_GetObjectByUID(nUID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XC_GetObjectByUIDName(pName: PWideChar): HXCGUI; stdcall; external XCGUI_DLL;

function XC_GetObjectByName(pName: PWideChar): HXCGUI; stdcall; external XCGUI_DLL;

procedure XC_SetPaintFrequency(nMilliseconds: Integer); stdcall; external XCGUI_DLL;

procedure XC_SetTextRenderingHint(nType: Integer); stdcall; external XCGUI_DLL;

procedure XC_EnableGdiDrawText(bEnable: BOOL); stdcall; external XCGUI_DLL;

function XC_RectInRect(var Rect1: TRect; var Rect2: TRect): BOOL; stdcall; external XCGUI_DLL;

procedure XC_CombineRect(var pDest: TRect; var pSrc1: TRect; var pSrc2: TRect); stdcall; external XCGUI_DLL;

procedure XC_ShowLayoutFrame(bShow: BOOL); stdcall; external XCGUI_DLL;

procedure XC_EnableDebugFile(bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XC_EnableResMonitor(bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XC_SetLayoutFrameColor(color: Integer); stdcall; external XCGUI_DLL;

procedure XC_EnableErrorMessageBox(bEnabel: BOOL); stdcall; external XCGUI_DLL;

procedure XC_EnableAutoExitApp(bEnabel: BOOL); stdcall; external XCGUI_DLL;

function XC_LoadResource(pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadResourceZip(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar = nil): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadResourceZipMem(data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar = nil): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadResourceFromString(pStringXML: PAnsiChar; pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadResourceFromStringUtf8(pStringXML: PAnsiChar; pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadStyle(pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadStyleZip(pZipFile: PWideChar; pFileName: PWideChar; pPassword: PWideChar = nil): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadStyleZipMem(data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar = nil): BOOL; stdcall; external XCGUI_DLL;

procedure XC_GetTextSize(pString: PWideChar; length: Integer; hFontX: HFONTX; out pOutSize: TSize); stdcall; external XCGUI_DLL;

procedure XC_GetTextShowSize(pString: PWideChar; length: Integer; hFontX: HFONTX; out pOutSize: TSize); stdcall; external XCGUI_DLL;

procedure XC_GetTextShowSizeEx(pString: PWideChar; length: Integer; hFontX: HFONTX; nTextAlign: Integer; out pOutSize: TSize); stdcall; external XCGUI_DLL;

procedure XC_GetTextShowRect(pString: PWideChar; length: Integer; hFontX: HFONTX; nTextAlign: Integer; width: Integer; out pOutSize: TSize); stdcall; external XCGUI_DLL;

function XC_GetDefaultFont(): HFONTX; stdcall; external XCGUI_DLL;

procedure XC_SetDefaultFont(hFontX: HFONTX); stdcall; external XCGUI_DLL;

procedure XC_AddFileSearchPath(pPath: PWideChar); stdcall; external XCGUI_DLL;

procedure XC_InitFont(pFont: PLOGFONTW; pName: PWideChar; size: Integer; bBold: BOOL = False; bItalic: BOOL = False; bUnderline: BOOL = False; bStrikeOut: BOOL = False); stdcall; external XCGUI_DLL;

function XC_Malloc(size: Integer): Pointer; stdcall; external XCGUI_DLL;

procedure XC_Free(p: Pointer); stdcall; external XCGUI_DLL;

procedure _XC_SetType(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE); stdcall; external XCGUI_DLL;

procedure _XC_AddType(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE); stdcall; external XCGUI_DLL;

procedure _XC_BindData(hXCGUI: HXCGUI; data: vint); stdcall; external XCGUI_DLL;

function _XC_GetBindData(hXCGUI: HXCGUI): vint; stdcall; external XCGUI_DLL;

procedure XC_Alert(pTitle: PWideChar; pText: PWideChar); stdcall; external XCGUI_DLL;

function XC_Sys_ShellExecute(hwnd: HWND; lpOperation: PWideChar; lpFile: PWideChar; lpParameters: PWideChar; lpDirectory: PWideChar; nShowCmd: Integer): HINST; stdcall; external XCGUI_DLL;

function XC_LoadLibrary(lpFileName: PWideChar): HMODULE; stdcall; external XCGUI_DLL;

function XC_GetProcAddress(hModule: HMODULE; lpProcName: PAnsiChar): FARPROC; stdcall; external XCGUI_DLL;

function XC_FreeLibrary(hModule: HMODULE): BOOL; stdcall; external XCGUI_DLL;

function XC_LoadDll(pDllFileName: PWideChar): HMODULE; stdcall; external XCGUI_DLL;

function XInitXCGUI(bD2D: BOOL): BOOL; stdcall; external XCGUI_DLL;

procedure XRunXCGUI(); stdcall; external XCGUI_DLL;

procedure XExitXCGUI(); stdcall; external XCGUI_DLL;

procedure XC_PostQuitMessage(nExitCode: Integer); stdcall; external XCGUI_DLL;

function XObj_GetType(hXCGUI: HXCGUI): XC_OBJECT_TYPE; stdcall; external XCGUI_DLL;

function XObj_GetTypeBase(hXCGUI: HXCGUI): XC_OBJECT_TYPE; stdcall; external XCGUI_DLL;

function XObj_GetTypeEx(hXCGUI: HXCGUI): XC_OBJECT_TYPE_EX; stdcall; external XCGUI_DLL;

procedure XUI_SetStyle(hXCGUI: HXCGUI; nStyle: XC_OBJECT_STYLE); stdcall; external XCGUI_DLL;

function XUI_GetStyle(hXCGUI: HXCGUI): XC_OBJECT_STYLE; stdcall; external XCGUI_DLL;

procedure XUI_EnableCSS(hXCGUI: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XUI_SetCssName(hXCGUI: HXCGUI; pName: PWideChar); stdcall; external XCGUI_DLL;

function XUI_GetCssName(hXCGUI: HXCGUI): PWideChar; stdcall; external XCGUI_DLL;

function XWidget_IsShow(hXCGUI: HXCGUI): BOOL; stdcall; external XCGUI_DLL;

procedure XWidget_Show(hXCGUI: HXCGUI; bShow: BOOL); stdcall; external XCGUI_DLL;

procedure XWidget_EnableLayoutControl(hXCGUI: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XWidget_IsLayoutControl(hXCGUI: HXCGUI): BOOL; stdcall; external XCGUI_DLL;

function XWidget_GetParentEle(hXCGUI: HXCGUI): HELE; stdcall; external XCGUI_DLL;

function XWidget_GetParent(hXCGUI: HXCGUI): HXCGUI; stdcall; external XCGUI_DLL;

function XWidget_GetHWND(hXCGUI: HXCGUI): HWND; stdcall; external XCGUI_DLL;

function XWidget_GetHWINDOW(hXCGUI: HXCGUI): HWINDOW; stdcall; external XCGUI_DLL;

procedure _XC_RegJsBind(pName: PAnsiChar; func: Integer); stdcall; external XCGUI_DLL;

procedure XC_RegFunExit(func: Pointer); stdcall; external XCGUI_DLL;

function XBkM_Create(): HBKM; stdcall; external XCGUI_DLL;

procedure XBkM_Destroy(hBkInfoM: HBKM); stdcall; external XCGUI_DLL;

function XBkM_SetBkInfo(hBkInfoM: HBKM; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XBkM_AddInfo(hBkInfoM: HBKM; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

procedure XBkM_AddBorder(hBkInfoM: HBKM; nState: Integer; color: Integer; width: Integer; id: Integer = 0); stdcall; external XCGUI_DLL;

procedure XBkM_AddFill(hBkInfoM: HBKM; nState: Integer; color: Integer; id: Integer = 0); stdcall; external XCGUI_DLL;

procedure XBkM_AddImage(hBkInfoM: HBKM; nState: Integer; hImage: HIMAGE; id: Integer = 0); stdcall; external XCGUI_DLL;

function XBkM_GetCount(hBkInfoM: HBKM): Integer; stdcall; external XCGUI_DLL;

procedure XBkM_Clear(hBkInfoM: HBKM); stdcall; external XCGUI_DLL;

function XBkM_Draw(hBkInfoM: HBKM; nState: Integer; hDraw: HDRAW; var Rect: TRect): BOOL; stdcall; external XCGUI_DLL;

function XBkM_DrawEx(hBkInfoM: HBKM; nState: Integer; hDraw: HDRAW; var Rect: TRect; nStateEx: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XBkM_EnableAutoDestroy(hBkInfoM: HBKM; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XBkM_AddRef(hBkInfoM: HBKM); stdcall; external XCGUI_DLL;

procedure XBkM_Release(hBkInfoM: HBKM); stdcall; external XCGUI_DLL;

function XBkM_GetRefCount(hBkInfoM: HBKM): Integer; stdcall; external XCGUI_DLL;

function XBtn_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; pName: PWideChar; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function XBtn_IsCheck(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XBtn_SetCheck(hEle: HELE; bCheck: BOOL): BOOL; stdcall; external XCGUI_DLL;

procedure XBtn_SetState(hEle: HELE; nState: common_state3_); stdcall; external XCGUI_DLL;

function XBtn_GetState(hEle: HELE): common_state3_; stdcall; external XCGUI_DLL;

function XBtn_GetStateEx(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XBtn_SetTypeEx(hEle: HELE; nType: XC_OBJECT_TYPE_EX); stdcall; external XCGUI_DLL;

procedure XBtn_SetGroupID(hEle: HELE; nID: Integer); stdcall; external XCGUI_DLL;

function XBtn_GetGroupID(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XBtn_SetBindEle(hEle: HELE; hBindEle: HELE); stdcall; external XCGUI_DLL;

function XBtn_GetBindEle(hEle: HELE): HELE; stdcall; external XCGUI_DLL;

procedure XBtn_SetTextAlign(hEle: HELE; nFlags: Integer); stdcall; external XCGUI_DLL;

function XBtn_GetTextAlign(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XBtn_SetIconAlign(hEle: HELE; align: button_icon_align_); stdcall; external XCGUI_DLL;

procedure XBtn_SetOffset(hEle: HELE; x: Integer; y: Integer); stdcall; external XCGUI_DLL;

procedure XBtn_SetOffsetIcon(hEle: HELE; x: Integer; y: Integer); stdcall; external XCGUI_DLL;

procedure XBtn_SetIconSpace(hEle: HELE; size: Integer); stdcall; external XCGUI_DLL;

procedure XBtn_SetText(hEle: HELE; pName: PWideChar); stdcall; external XCGUI_DLL;

function XBtn_GetText(hEle: HELE): PWideChar; stdcall; external XCGUI_DLL;

procedure XBtn_SetIcon(hEle: HELE; hImage: HIMAGE); stdcall; external XCGUI_DLL;

procedure XBtn_SetIconDisable(hEle: HELE; hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XBtn_GetIcon(hEle: HELE; nType: Integer): HIMAGE; stdcall; external XCGUI_DLL;

procedure XBtn_AddAnimationFrame(hEle: HELE; hImage: HIMAGE; uElapse: UINT); stdcall; external XCGUI_DLL;

procedure XBtn_EnableAnimation(hEle: HELE; bEnable: BOOL; bLoopPlay: BOOL = FALSE); stdcall; external XCGUI_DLL;

function XComboBox_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function XComboBox_SetSelItem(hEle: HELE; iIndex: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XComboBox_GetButtonRect(hEle: HELE; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XComboBox_SetButtonSize(hEle: HELE; size: Integer); stdcall; external XCGUI_DLL;

procedure XComboBox_SetDropHeight(hEle: HELE; height: Integer); stdcall; external XCGUI_DLL;

function XComboBox_GetDropHeight(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XComboBox_CreateAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

procedure XComboBox_BindAdapter(hEle: HELE; hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XComboBox_GetAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

procedure XComboBox_SetBindName(hEle: HELE; pName: PWideChar); stdcall; external XCGUI_DLL;

procedure XComboBox_SetItemTemplateXML(hEle: HELE; pXmlFile: PWideChar); stdcall; external XCGUI_DLL;

procedure XComboBox_SetItemTemplateXMLFromString(hEle: HELE; pStringXML: PAnsiChar); stdcall; external XCGUI_DLL;

procedure XComboBox_EnableDrawButton(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XComboBox_EnableEdit(hEle: HELE; bEdit: BOOL); stdcall; external XCGUI_DLL;
